--- a/page1.html
+++ b/page1.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <!-- Rest of your content -->
-    <main>
+    <main class="pdf-image">
     <img src="Haveli_MenuFnl-01.jpg" alt="PDF Page 4">
   </main>
 
