--- a/page2.html
+++ b/page2.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <!-- Rest of your content -->
-    <main>
+    <main class="pdf-image">
     <img src="Haveli_MenuFnl-02.jpg" alt="Break-Fast">
   </main>
 
