--- a/page3.html
+++ b/page3.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <!-- Rest of your content -->
-    <main>
+    <main class="pdf-image">
     <img src="Haveli_MenuFnl-03.jpg" alt="Bevrages and Raita">
   </main>
 
