--- a/page4.html
+++ b/page4.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <!-- Rest of your content -->
-    <main>
+    <main class="pdf-image">
     <img src="Haveli_MenuFnl-04.jpg" alt="Appetisers">
   </main>
 
